# clehrity

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/clehrity/: __init__.py  __main__.py  changepoints.py  test_changepoints.py
tests/: __init__.py  test_changepoints.py  test_main.py
